converted to Kotlin